odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: futurekawa-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: odoo:16.0
          args: ["--", "-u", "base"]
          ports:
            - containerPort: 8069
            - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: futurekawa-app
spec:
  ports:
    - name: http
      port: 8069
      targetPort: 8069
    - name: longpolling
      port: 8072
      targetPort: 8072
  selector:
    app: odoo
